--- a/Fusion/tsconfig.json
+++ b/Fusion/tsconfig.json
@@ -9,6 +9,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": [
+      "underscore"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
